--- a/python-sqlglot/PKGBUILD
+++ b/python-sqlglot/PKGBUILD
@@ -8,7 +8,7 @@ arch=('any')
 url='https://github.com/tobymao/sqlglot'
 license=('MIT')
 depends=('python')
-makedepends=(
+makedepends=('python-flit-scm'
     'python-setuptools'
     'python-build'
     'python-installer'
